Add Facebook links.

--- a/giving/recipients/templates/recipients/index.html
+++ b/giving/recipients/templates/recipients/index.html
@@ -24,7 +24,7 @@
       <ul class="categories__org-list six columns">
         {% for r in cat.recipients %}
         <li>
-          {% link_to_recipient r classname="u-indent-fix" %}
+          {% link_to_recipient r %}
         </li>
         {% endfor %}
         <li>
