--- a/giving/recipients/static/css/index.css
+++ b/giving/recipients/static/css/index.css
@@ -326,7 +326,6 @@ ul.categories__org-list {
 .categories__org-list li {
   margin: 0 0 0.6rem;
   padding: 0 0 0 15px;
-  text-indent: -15px;
   line-height: 130%;
 }
 
@@ -340,11 +339,26 @@ ul.categories__org-list {
   text-decoration: none;
   color: #555;
   font-size: 80%;
-  /* needs a margin because font-awesome makes the links inline-block */
 }
 
 .u-indent-fix .recipient__twitter-link {
-  margin-left: 15px;
+  /* needs a margin because font-awesome makes the links inline-block */
+/*  margin-left: 15px;*/
+}
+
+.recipient__twitter-link:link + .recipient__facebook-link:link {
+  margin-left: 0;
+}
+
+.recipient__twitter-link:link,
+.recipient__twitter-link:visited,
+.recipient__facebook-link:link,
+.recipient__facebook-link:visited {
+  margin-left: 5px;
+  margin-right: 5px;
+  text-decoration: none;
+  color: #555;
+  font-size: 80%;
 }
 
 .categories__more-link {
