get blog posts working and update how facebook post text is formed

--- a/giving/blog/templates/blog/view_post.html
+++ b/giving/blog/templates/blog/view_post.html
@@ -1,5 +1,6 @@
-{% include "blog/header.html" %}
-{% include "blog/picker.html" %}
+{% include "recipients/header.html" %}
+
+{% include "recipients/about.html" %}
 
 <div class="container">
 
@@ -15,5 +16,6 @@
 
 </div>
 
-{% include "blog/footer.html" %}
 {% include "recipients/newsletter_signup.html" %}
+
+{% include "recipients/footer.html" %}
