--- a/giving/recipients/templates/recipients/about.html
+++ b/giving/recipients/templates/recipients/about.html
@@ -22,9 +22,9 @@
         <div class="about__menu-item three columns">
           <a href="/about">About this site</a>
         </div>
-        {#<div class="about__menu-item three columns">#}
-          {#<a href="/blog">Weblog</a>#}
-        {#}</div>#}
+        <div class="about__menu-item three columns">
+          <a href="/blog">Weblog</a>
+        </div>
       </div> {# .row #}
     </div> {# .container #}
   </div> {# .about__menu #}
