--- a/giving/blog/templates/blog/all.html
+++ b/giving/blog/templates/blog/all.html
@@ -1,13 +1,15 @@
-{% include "blog/header.html" %}
-{% include "blog/picker.html" %}
+{% include "recipients/header.html" %}
+
+{% include "recipients/about.html" %}
 
 <div class="container">
 
     {% if entry_list %}
+        <br>
         {% for entry in entry_list %}
-            <p>
-                <a href="/blog/post/{{ entry.slug }}/">{{ entry.title }}</a> {{ entry.created_at|date:"M d, Y" }}
-            </p>
+            <ul>
+              <li><a href="/blog/post/{{ entry.slug }}/">{{ entry.title }}</a> {{ entry.created_at|date:"M d, Y" }}</li>
+            </ul>
         {% endfor %}
     {% else %}
         No entries available.<br />
@@ -15,5 +17,6 @@
 
 </div>
 
-{% include "blog/footer.html" %}
 {% include "recipients/newsletter_signup.html" %}
+
+{% include "recipients/footer.html" %}
