--- a/giving/recipients/templates/recipients/suggestionform.html
+++ b/giving/recipients/templates/recipients/suggestionform.html
@@ -1,40 +1,43 @@
 {% include "recipients/header.html" %}
 {% include "recipients/about.html" %}
-<div class="container categories">
-  <div class="row category-list">
-    <section class="category twelve columns">
+<div class="container suggestion-form">
+  
+  <form method="POST" class="post-form">
+    {% csrf_token %}
+    <div class="row">
+      <h4 class="suggestion-form__title">Is there a charitable organization you think we should know about?<br>Tell us here!</h4>
+      
+      <div class="twelve columns">
+        <label for="{{ form.name.id_for_label }}">Organization name (required)</label>
+        {{ form.name }}
+        <div class="u-errors">{{ form.name.errors }}</div>
+      </div>
+      
+      <div class="twelve columns">
+        <label for="{{ form.url.id_for_label }}">URL (required)</label>
+        {{ form.url }}
+        <div class="u-errors">{{ form.url.errors }}</div>
+      </div>
+      
+      <div class="twelve columns">
+        <label for="{{ form.twitter_handle.id_for_label }}">Twitter handle</label>
+        {{ form.twitter_handle }}
+        <div class="u-errors">{{ form.twitter_handle.errors }}</div>
+      </div>
+      
+      <div class="twelve columns">
+        <label for="{{ form.facebook_url.id_for_label }}">Facebook URL</label>
+        {{ form.facebook_url }}
+        <div class="u-errors">{{ form.facebook_url.errors }}</div>
+      </div>
+      
+      <div class="twelve-columns">
+        <button type="submit" class="button-primary">Submit</button>
+      </div>
+      
+    </div> {# .row #}
+  </form>
+  
+</div> {# .container #}
 
-      <br>
-      <h4>Is there a charitable organization you think we should know about?<br>Tell us here!</h4>
-
-          <form method="POST" class="post-form">{% csrf_token %}
-            {% csrf_token %}
-            <table>
-              <tr>
-                <td><label for="{{ form.name.id_for_label }}">Organization name (required):</label></td>
-                <td>{{ form.name }}</td>
-                <td style="color: red">{{ form.name.errors }}</td>
-              </tr>
-              <tr>
-                <td><label for="{{ form.url.id_for_label }}">URL (required):</label></td>
-                <td>{{ form.url }}</td>
-                <td style="color: red">{{ form.url.errors }}</td>
-              </tr>
-              <tr>
-                <td><label for="{{ form.twitter_handle.id_for_label }}">Twitter handle:</label></td>
-                <td>{{ form.twitter_handle }}</td>
-                <td style="color: red">{{ form.twitter_handle.errors }}</td>
-              </tr>
-              <tr>
-                <td><label for="{{ form.facebook_url.id_for_label }}">Facebook URL:</label></td>
-                <td>{{ form.facebook_url }}</td>
-                <td style="color: red">{{ form.facebook_url.errors }}</td>
-              </tr>
-            </table>
-            <button type="submit" class="save btn btn-default">Submit</button>
-          </form>
-
-    </section>
-  </div> {# .row #}
-</div>
 {% include "recipients/footer.html" %}
