add suggestion form to the nav

--- a/giving/recipients/templates/recipients/about.html
+++ b/giving/recipients/templates/recipients/about.html
@@ -25,6 +25,9 @@
         <div class="about__menu-item three columns">
           <a href="/blog">Weblog</a>
         </div>
+        <div class="about__menu-item three columns">
+          <a href="/suggest">Suggest an organization</a>
+        </div>
       </div> {# .row #}
     </div> {# .container #}
   </div> {# .about__menu #}
