--- a/giving/recipients/static/css/index.css
+++ b/giving/recipients/static/css/index.css
@@ -268,8 +268,10 @@ input[type="submit"].newsletter__button:active {
 }
 
 .categories__title {
-  hyphens: auto;
+  hyphens: none;
+  overflow: hidden;
   font-family: 'Titillium Web', sans-serif;
+  font-weight: 900;
   font-size: 36px;
   box-sizing: border-box;
   margin-bottom: 0.3rem;
